--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!--The main moto of this Application is just spreading the awareness towards Git and GitHub-->
     <script src="index.js"></script>
   </body>
 </html>
