First changes has been done

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,29 @@
     <title>Document</title>
   </head>
   <body>
-    <!--The main moto of this Application is just spreading the awareness towards Git and GitHub-->
+    <header>
+      <nav class="nav-main">
+        <div class="nav-left">
+          <div class="nav-logo">
+            <img
+              class="img-logo"
+              src="./assets/b lo-01.png"
+              width="114"
+              height="50"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="nav-right">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <script src="index.js"></script>
   </body>
 </html>
